--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -23,25 +22,17 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
-        <div class="container"></div>
-    </div>
-
     <div class="container">
         <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
     </div>
 
-    <div class="footer">
-        <div class="container text-center">
-            <p>prepared with <span class="glyphicon glyphicon-heart"></span> by the smove team</p>
-        </div>
-    </div>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
